hphp/hack/test/typecheck/test_consts4.php.exp
File "test_consts4.php", line 11, characters 22-24:
Invalid expression in constant initializer (Parsing[1002])
